# aicreator

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  alembic.ini  progress.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2089e8373d0d_initial_generations_table.py
demo/: .env  .gitignore  README.md  docker-compose.yml
demo/config/: go-server.yaml  python-client.yaml
demo/dockerfiles/: Dockerfile.go  Dockerfile.kotlin  Dockerfile.python
demo/scripts/: format-go.sh  format-kotlin.sh  format-python.sh  generate-f1-kotlin.sh  generate-f2-go.sh  generate-f4-python.sh  run-all.sh  validate-go.sh  validate-kotlin.sh  validate-python.sh
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh
docs/: master-plan.md  presentation-plan.md
docs/architecture/: c4-container.puml  c4-context.puml  ep02-foundation-speaker-notes.md  seq-cicd-generation.puml  seq-cli-generation.puml  seq-ui-puml-generation.puml
docs/ep01-demo/: demo-guide.md  log.md  plan.md  research.md  tasks.md
docs/ep02-foundation/: log.md  plan.md  research.md  tasks.md
presentations/: aicreator-cto-pitch.md  package-lock.json  package.json
presentations/components/: Callout.vue  CompareTable.vue  FeatureCard.vue  KpiCard.vue  ProcessFlow.vue  QuoteBlock.vue  SectionDivider.vue  StatHighlight.vue  Timeline.vue
presentations/layouts/: cover.vue  end.vue  metrics.vue  section.vue  two-cols-styled.vue
presentations/setup/: main.ts
presentations/styles/: base.css  mermaid.css
src/aicreator/: __init__.py
tests/: conftest.py
(+63 files in other folders)
